--- a/auto-ml-forecasting-energy-demand.ipynb
+++ b/auto-ml-forecasting-energy-demand.ipynb
@@ -14,12 +14,12 @@
       "source": [
         "# Introduction<a id=\"introduction\"></a>\n",
         "\n",
-        "In this example we use the associated New York City energy demand dataset to showcase how you can use AutoML for a simple forecasting problem and explore the results. The goal is predict the energy demand for the next 48 hours based on historic time-series data.\n",
+        "This solution uses New York City energy demand dataset to showcase how AutoML can be used for a simple forecasting problem and explore the results. The goal is predict the energy demand for the next 48 hours based on historic time-series data.\n",
         "\n",
-        "If you are using an Azure Machine Learning Compute Instance, you are all set. Otherwise, go through the [configuration notebook](../../../configuration.ipynb) first, if you haven't already, to establish your connection to the AzureML Workspace.\n",
+    
         "\n",
-        "In this notebook you will learn how to:\n",
-        "1. Creating an Experiment using an existing Workspace\n",
+        "In this notebook:\n",
+ 
         "1. Configure AutoML using 'AutoMLConfig'\n",
         "1. Train the model using AmlCompute\n",
         "1. Explore the engineered features and results\n",
